--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>cloud-consumer-feign-order80</module>
         <module>could-provider-hystrix-payment8001</module>
         <module>cloud-consumer-feign-hystrix-order80</module>
+        <module>cloud-gateway-gateway9527</module>
     </modules>
 
     <!-- 统一管理jar版本-->
